Kubernetes/week12/network/allow-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend
  namespace: lab-app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: backend

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: nginx

        - podSelector:
            matchLabels:
              app.kubernetes.io/name: health-check

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system

      ports:
        - protocol: TCP
          port: 5000

  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: postgres
      ports:
        - protocol: TCP
          port: 5432
