Kubernetes/week12/network/allow-health-check.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-health-check
  namespace: lab-app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: health-check

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: backend
      ports:
        - protocol: TCP
          port: 5000
