Kubernetes/week12/network/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: lab-app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
